--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,9 @@ url: "https://gitpuleo.github.io" # the base hostname & protocol for your site, 
 
 
 # Build settings
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-feed
-
+- jekyll-remote-theme 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
