--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ url: "https://gitpuleo.github.io" # the base hostname & protocol for your site, 
 # Build settings
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme 
+  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
